# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
                 "description": "Get all gangues from database",
                 "operationId": "ganga@index",
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "All gangues are recieved"
                     }
                 }
@@ -77,7 +77,7 @@
                     }
                 },
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Ganga was saved to the database succesfully"
                     },
                     "403": {
@@ -111,7 +111,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Ganga with id is retrieved succesfully"
                     },
                     "404": {
@@ -188,7 +188,7 @@
                     }
                 },
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Ganga was updated to the database succesfully"
                     },
                     "403": {
@@ -223,7 +223,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Ganga was deleted from the database succesfully"
                     },
                     "403": {
